# ActM3.4-SimulacionProyectoFinalZidalejulora

./: LICENCIA.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
launch/: gazebo_world.launch.py  launch.py  mapping.launch.py  navigation.launch.py  zaidalejulora_launch.py
map/: hexagonal_map.yaml
rviz/: mapping.rviz  navigation.rviz
urdf/: puzzlebot.urdf
worlds/: world.world
zaidalejulora_nav2_puzzlebot/: dummy_node.py  localisation.py  package.xml  point_stabilisation_controller.py  puzzlebot_sim.py  setup.py
zaidalejulora_nav2_puzzlebot/launch/: launch.py
zaidalejulora_nav2_puzzlebot/urdf/: puzzlebot.urdf
zaidalejulora_nav2_puzzlebot/worlds/: model.sdf
