<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zaidalejulora_nav2_puzzlebot</name>
  <version>1.0.0</version>
  <description>Navigation + simulation setup for Puzzlebot in Gazebo Garden</description>
  <maintainer email="A01709293@tec.mx">Daniela Aurora Martinez Fajardo</maintainer>
  <maintainer email="A01708755@tec.mx">Zaida Irais Lopez Mendieta</maintainer>
  <maintainer email="A0179475@tec.mx">Francisco Alejandro Velázquez Ledesma</maintainer>
  <maintainer email="A01709375@tec.mx">DJulio David Reséndiz Cruz</maintainer>
  <license>MIT</license>

  <!-- Dependencias para la simulacion con Gazebo y para el robot simulado -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros2launch</depend>
  <depend>tf2_ros_py</depend>
  <depend>python3-numpy</depend>
  <depend>python3-transforms3d</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
